--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,2 +1,44 @@
-
 @import url('./reset.css');
+@import 'simplelightbox/dist/simple-lightbox.min.css';
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  max-width: 1128px;
+  margin: 0 auto;
+  padding: 24px;
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.gallery-image {
+  width: 360px;
+  height: 200px;
+}
+.img-modal {
+  width: 1112px;
+  height: 640px;
+}
+
+.modal {
+  margin-top: 28px;
+  margin-bottom: 28px;
+}
+.gallery-image:hover {
+  transform: scale(1.1);
+  transition-duration: 500ms;
+}
